fix bug context z-index map-google

--- a/Vista/css/style.css
+++ b/Vista/css/style.css
@@ -39,6 +39,7 @@ a {
     color: white;
     font-size: 14px;
     box-shadow: 2px 2px 6px 2px rgba(0,0,0,0.4) ;
+    z-index: 2;
 }
 
 .header, .center-header, .info-user, .header-left, .container, .body-container {
@@ -158,6 +159,7 @@ a {
     background-color: rgb(248, 238, 19);
     padding: 1%;
     text-align: center;
+    z-index: 2;
 }
 
 .footer-head {
